# cartero

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NEWS.md  README.md  book.toml  meson.build
.github/workflows/: appimage.yaml  nightly.yaml  stable.yaml
build-aux/: appimage-build.sh  macos-build.sh  macos-installer.sh  msys-build.sh
build-aux/macos-build/: install-deps.sh  sign.sh
data/: cartero.gresource.xml  es.danirod.Cartero.gschema.xml  meson.build  style.css
data/ui/: code_export_pane.blp  curl_export_pane.blp  endpoint_pane.blp  export_tab.blp  formdata_payload_pane.blp  key_value_pane.blp  key_value_row.blp  main_window.blp  main_window_no_csd.blp  method_dropdown.blp  payload_tab.blp  raw_payload_pane.blp  response_headers.blp  response_panel.blp  search_box.blp  settings_dialog.blp  urlencoded_payload_pane.blp
doc/: SUMMARY.md  compiling.md  contributing.md  credits.md  hacking.md  installing.md  introduction.md  releng.md
doc/compiling/: macos.md  windows.md
doc/installing/: macos-brew.md  nixos-flake.md
doc/website/: index.html  style.css
hooks/: pre-commit.hook
po/: LINGUAS  POTFILES.in  ca.po  cartero.pot  cs.po  eo.po  es.po  fr.po  meson.build  pt_BR.po  ro.po  ru.po  ta.po
src/: app.rs  entities.rs  error.rs  file.rs  main.rs  win.rs
src/client/: isahc_conv.rs  local.rs
src/widgets/: code_view.rs  endpoint_pane.rs  key_value_pane.rs  key_value_row.rs  mod.rs  response_panel.rs  search_box.rs
src/widgets/export_tab/: base.rs  code.rs  curl.rs  mod.rs  service.rs  tab.rs
src/windows/: mod.rs  settings.rs
(+4 files in other folders)
